--- a/styles/sass/partials/_extra.scss
+++ b/styles/sass/partials/_extra.scss
@@ -165,6 +165,3 @@
         transition: all 0.2s ease;
     }
 }
-.trophy {
-    width: 150%;
-}
